Desktop evening 15 May 2019

--- a/5.md
+++ b/5.md
@@ -304,7 +304,7 @@ Perhaps the most fascinating account of the experience of homosexuality was Dona
 
 The solution, Cory held, was to speak forthrightly as openly gay people. That gay men could so easily pass was not a blessing. “Actually, the inherent tragedy --- not the saving grace --- of homosexuality is found in the ease of concealment. If the homosexual were as readily recognizable as . . . other minority groups, the social condemnation could not possibly exist. Stereotype thinking on the part of the majority would . . . collapse of its own absurdity if all of us who are gay were known for what we are. . . . If only all of the inverts, the millions in all lands, could simultaneously rise up in our full strength!”[^73] A gay organization should aim not for social tolerance, which Sagarin defined as the condescension of the superior for the inferior or the evil, but for acceptance on equal footing.
 
-[^72]:	Donald Webster Cory, _The Homosexual in America: A Subjective Approach_ (New York: Greenberg Publisher, 19151) 12.
+[^72]:	Donald Webster Cory, _The Homosexual in America: A Subjective Approach_ (New York: Greenberg Publishers, 19151) 12.
 
 [^73]:	Cory, 230.
 
@@ -319,38 +319,46 @@ Nonetheless Sagarin paved the way for numerous attacks on the closet. Jenette Ho
 ### The Tentative Border Crossing of American Music
 
 
-It was no coincidence that Norman Mailer’s “White Negro” depended so much on his attribution of anarchical impulses to jazz musicianship. For much of American history, whites have turned to black music as a source of energy, often to salve real and imaginary wounds. Such cultural appropriation has yanked the music out of its context, stereotyped black thought and culture as primitive and unschooled, and denied black musicians credit and remuneration. In the first half of the twentieth century, formal critical opinion dismissed the aesthetic quality of black and Latino musics as lacking complexity, rigor, or spirituality. Music industry executives were less devoted to hierarchies of quality than to a classification scheme that conformed to actually existing tastes. Such schemes took the uncertainty out of selling records and usually conformed to the sociological characteristics of the audience rather than any particular musical qualities per se. The pop, country, race (later rhythm and blues) charts designated music marketed to white middle class, white Southern, and black listeners respectively rather than a single style or form of musical expression. Race records, for instance, were a musical hodgepodge, lumping together gospel, electric and country blues, black pop, and doo-wop. Because they were rooted in race and class, the charts were assumed to define self-contained, mutually exclusive tastes.[^75] For many critics and record executives, postwar jazz constituted a different category, especially since many musicians during and after the war aspired to make music that resisted racial and commercial appropriation.
+It was no coincidence that Norman Mailer’s “White Negro” depended so much on his attribution of anarchical impulses to jazz musicianship. For much of American history, whites have turned to black music as a source of energy, often to salve real and imaginary wounds. Such cultural appropriation has yanked the music out of its context, stereotyped black thought and culture as primitive and unschooled, and denied black musicians credit and remuneration. In the first half of the twentieth century, formal critical opinion dismissed the aesthetic quality of black and Latino musics as lacking complexity, rigor, or spirituality. Music industry executives were less devoted to hierarchies of quality than to a classification scheme that reflected actually existing tastes. Such schemes took the uncertainty out of selling records and usually specified the sociological characteristics of the audience rather than any particular musical qualities per se. The pop, country, race (later rhythm and blues) charts designated music marketed to white middle class, white Southern, and black listeners respectively rather than a single style or form of musical expression. Race records, for instance, were a musical hodgepodge, lumping together gospel, electric and country blues, black pop, and doo-wop. Because they were rooted in race and class, the charts were assumed to define self-contained, mutually exclusive tastes. For many critics and record executives, postwar jazz constituted a different category, especially since many musicians during and after the war aspired to make music that resisted racial and commercial appropriation.[^75]
 
 [^75]:	David Hajdu, _Love for Sale: Pop Music in America_ (New York: Farrar, Straus and Giroux, 2016); David Brackett, _The Pop, Rock, and Soul Reader: Histories and Debates_ (New York: Oxford University Press, 2005); Larry Starr and Christopher Alan Waterman, _American Popular Music From Minstrelsy to Mp3_ (New York: Oxford University Press, 2010).
 
-At first glance, then, it seemed unlikely that white audiences would truly appreciate the skill, dedication, and intelligence of minority musicians or that white musicians would borrow black or Latin elements without parodying, exaggerating, or misconceiving them. Yet there were moments in the 1950s that constituted meaningful border crossings that approximated Ellison’s hope that whites would seriously appreciate the meaningful contributions of black culture. The possibility of new music cultures was opened with the breakdown of the rigid categories of the music marketplace. If charts, jukeboxes, and radio formats were still segregated, not all listeners’ tastes were. The airwaves, especially clear channels at night, were available to anyone with a set and the number of boundary crossings were significant. White consumers, especially teenagers, showed a significant interest beyond their parents’ taste. One such listener, Elvis Presley, demonstrated his love for rhythm and blues when he started playing Arthur “Big Boy” Crudup’s “That’s All Right Mama” during a break in what had been an unsuccessful recording session Sam Phillip’s Sun studio in Memphis. Border crossing was not solely white interest in black music. Black listeners, contrary to expectations, knew their country and western music. One such listener, Chuck Berry, incorporated the fiddle tune “Ida Red” into his first hit record “Maybellene” in 1955. It was the melding of influences, supported by crossover listeners that led to one of the crucial innovations of American music, rock ’n’ roll.
+At first glance, then, it seemed unlikely that white audiences would truly appreciate the skill, dedication, and intelligence of minority musicians or that white musicians would borrow black or Latin elements without parodying, exaggerating, or misconceiving them. Yet there were moments in the 1950s that constituted meaningful border crossings in which musicians and audiences transcended rigid commercial and critical boundaries and demonstrated honest and respectful appreciation of other musics. If charts, jukeboxes, and radio formats were still segregated, not all listeners’ tastes were. The airwaves, especially clear channels at night, were available to anyone with a set and the number of boundary crossings were significant. White consumers, particularly teenagers, did not feel an allegiance to their parents’ taste. The interchange was more likely in places where musical cultures overlapped such as along the Mississippi River. One such listener, Elvis Presley, demonstrated his love for rhythm and blues when he started playing Arthur “Big Boy” Crudup’s “That’s All Right Mama” during a break in what had been an unsuccessful recording session Sam Phillip’s Sun studio in Memphis. Border crossing was not solely white interest in black music. Black listeners, contrary to expectations, knew their country and western music. One such listener, Chuck Berry, incorporated the fiddle tune “Ida Red” into his first hit record “Maybellene” in 1955. It was the melding of influences, supported by crossover listeners that led to one of the crucial innovations of American music, rock ’n’ roll.
 
 
 
-Miles Davis’s border crossing was even more eclectic, a demonstration of the degree to which jazz had become incessantly creative. A student at Juilliard, Davis simultaneously thought it too mired in European classical and white music and valuable for the music theory he learned. After dropping out, he went to work for bebop pioneer Charlie Parker. Parker’s great innovation was his playing the alto saxophone in flurries of sixteenth notes rather than the four steady beats per bar, piling new chords and syncopated melodies on top of extended chords. In addition, Parker became an idol to musicians such as Davis because Parker spurned the role of the musician as entertainer who pleased and courted his audience. When Davis struck out on his own in the late 1940s, he extended the stance becoming the epitome of the removed, fiercely proud black artist. He retained as well his predilection for middle range, muted tones. Working with Canadian-born arranger Gil Evans, Davis slowed down the furious pace of bebop and supplemented it with harmonies drawn from European impressionist composers. Noted jazz critic Gary Giddins pointed out that the combination of swing, bop, and classical techniques that produced “cloudlike chords in which the harmonies slipped seamlessly one to the next and breathlessly long phrases.”[^76] With _Birth of the Cool_ (recorded 1950, released 1957), Davis and Evans constructed a sound that used paired instruments in the nine-piece group to achieve what was termed a unison sound that Davis insisted sounded like human voices singing. By 1959, Davis had shifted again, incorporating pianist George Russell’s concept of tones that rested on a new mode, the Lydian, which emphasized fifths. Russell expanded upon early-modern church music to establish chromatic scales that had twelve tones. Working with pianist Bill Evans (no relation to Gil) and saxophonist John Coltrane, Davis expanded beyond bebop to multiply the available sounds. In _Kind of Blue_ (1959), Evans departed from usual practice when he did not play the full chords that players used to set the harmonies. Using these modes, the album, as the name suggests, constituted as much a meditation on the blues as a blues itself.[^77]
+St. Louis-born trumpeter Miles Davis’s border crossing was even more eclectic, a demonstration of the degree to which jazz had become incessantly creative. A student at Juilliard, Davis simultaneously thought it too mired in European classical and white music and valuable for the music theory he learned. After dropping out, he went to work for bebop pioneer Charlie Parker. Parker’s great innovation was his playing the alto saxophone in flurries of sixteenth notes rather than the four steady beats per bar, piling new chords and syncopated melodies on top of extended chords. Parker's method was espcially striking when he innovatively improvised from old standards and popular show tunes. Parker became an idol to musicians such as Davis because Parker spurned the role of the musician as entertainer who pleased and courted his audience. When Davis struck out on his own in the late 1940s, he extended the stance becoming the epitome of the removed, fiercely proud black artist. He retained as well his predilection for middle range, muted tones. Working with Canadian-born arranger Gil Evans, Davis slowed down the furious pace of bebop and supplemented it with harmonies drawn from European impressionist composers. Noted jazz critic Gary Giddins pointed out that the combination of swing, bop, and classical techniques that produced “cloudlike chords in which the harmonies slipped seamlessly one to the next and breathlessly long phrases.”[^76] With _Birth of the Cool_ (recorded 1950, released 1957), Davis and Evans constructed a sound that used paired instruments in the nine-piece group to achieve what was termed a unison sound that Davis insisted sounded like human voices singing.
+
+By 1959, Davis had shifted again, incorporating pianist George Russell’s concept of tones that rested on a new mode, the Lydian, which emphasized fifths. Russell expanded upon early-modern church music to establish chromatic scales that had twelve tones. Working with pianist Bill Evans (no relation to Gil) and saxophonist John Coltrane, Davis expanded beyond bebop to multiply the available sounds. In _Kind of Blue_ (1959), Evans departed from usual practice when he did not play the full chords that players used to set the harmonies. Using these modes, the album, as the name suggests, constituted as much a meditation on the blues as a blues itself. In one fell swoop, Davis had created a new music that was most definitely part of black culture yet more syncretic. In the process, he consolidated jazz as a different type of art music.[^77]
 
 [^76]:	Gary Giddins, _Visions of Jazz: The First Century_ (New York: Oxford University Press, 1998), 340.
 
-[^77]:	Ashley Kahn, _Kind of Blue: The Making of the Miles Davis Masterpiece_(Da Capo Press, 2000); Frank Alkyer, _The Miles Davis Reader: Updated Edition (the Downbeat Hall of Fame Series)_ (New York: Backbeat Books, 2018); Gerald Early, _Miles Davis and American Culture (Missouri Historical Society Press)_ (St. Louis: Missouri History Museum Press, 2001).
+[^77]:	Ashley Kahn, _Kind of Blue: The Making of the Miles Davis Masterpiece_(Da Capo Press, 2000); Frank Alkyer, _The Miles Davis Reader: Updated Edition_ (New York: Backbeat Books, 2018); Gerald Early, _Miles Davis and American Culture (Missouri Historical Society Press)_ (St. Louis: Missouri History Museum Press, 2001).
 
-Not all interchanges were as creative or as respectful. To be sure, there was something amounting to a moral panic in the press from mental health professionals and religious authorities about the animal spirits that popular black music awakened in listeners. _Time_ Magazine claimed that fans of rock ’n’ roll were as mindless as Hitler’s followers.[^78] Such sentiments proved less authoritative than those who made them hoped. More lasting was the power of white entrepreneurs who negotiated particularly disadvantageous contracts with black performers (the disc jockey and impresario Alan Freed got songwriting credit for Chuck Berry’s “Maybellene” in return for pushing it to his considerable following). Black artists often found themselves elbowed out of mainstream attention when record executives employed white artists to do songs that black musicians had written, altering the lyrics, rhythm, or presentation to reduce any perceived threat from black male swagger and the defiance that went with it. Pat Boone, a Columbia University English major, was noteworthy for covers of Fats Domino and Little Richard hits, interspersed with crooning ballads. Boone’s versions sold exceedingly better among white teenagers, as much because his records were more often played and more often found in record stores that white record buyers frequented as because the majority only wanted versions that they regarded as more accessible. By the late 1950s and early 1960s, white musicians had mastered their imitations, bequeathing white music with in the words of Eric Lott “the cool, virility, humility, or _gaite de couer_ that were the prime components of white ideologies of black manhood.”[^79]
+Not all interchanges were as creative or as respectful. To be sure, there was something amounting to a moral panic in the press from mental health professionals and religious authorities about the animal spirits that popular black music awakened in listeners. _Time_ Magazine claimed that fans of rock ’n’ roll were as mindless as Hitler’s followers.[^78] Such sentiments proved less authoritative than those who made them hoped. More lasting was the power of white entrepreneurs who negotiated particularly disadvantageous contracts with black performers (the disc jockey and impresario Alan Freed got songwriting credit for Chuck Berry’s “Maybellene” in return for pushing it to his considerable following). Black artists often found themselves elbowed out of mainstream attention when record executives employed white artists to perform songs that black musicians had written, altering the lyrics, rhythm, or presentation to reduce any perceived threat from black male swagger and the defiance that went with it. Pat Boone, a Columbia University English major, was noteworthy for covers of Fats Domino and Little Richard hits, interspersed with crooning ballads. Boone’s versions sold exceedingly better among white teenagers, as much because his records were more often played and more often found in record stores that white record buyers frequented as because the majority only wanted versions that they regarded as more accessible. By the late 1950s and early 1960s, white musicians had mastered their imitations, bequeathing white music with in the words of Eric Lott “the cool, virility, humility, or _gaite de couer_ that were the prime components of white ideologies of black manhood.”[^79]
 
 [^78]:	Glenn C. Altschuler, _All Shook Up: How Rock ‘N’ Roll Changed America_ (New YorkOxford University Press, USA, 2004), 6.
 
 [^79]:	Eric Lott, _Love and Theft: Blackface Minstrelsy and the American Working Class_ (New York: Oxford University Press, 1993), 32.
 
-The cultural interaction involved in the song “Hound Dog” entailed both collaboration and exploitation, ventriloquism and fruitful exchange. It is the story of a song written by two Jewish songwriters for a gender transgressive female blues singer and redone in a new fashion by a white working-class Southerner. The songwriters were Jerry Leiber and Mike Stoller, who fell in love with black culture and produced hits for such black groups as the Coasters and the Drifters. By most accounts, group members were impressed with the depth of black cultural knowledge that the pair had. For all their aspiration to overcome long-standing notions of black inferiority and commitment to cultural unity, Leiber and Stoller nonetheless emphasized black clownishness and black sexuality in ways they could not fully control. In Big Mama Thornton, they wrote for a singer whose short hair, male clothing, and gruff manner made her a distinctive female presence. They expected she would growl the song that drew upon the blues motifs to tell the story of a woman who rids herself of a gigolo but Thornton’s first run-through was more akin to crooning. Efforts to tell her how to sing led to her counter that a white boy had no standing to tell her how to sing the blues that she grew up with. Eventually a rapprochement was reached and Thornton added her own interpretative elements, which led her at one point to claim ownership of the song in an effort to get fair remuneration from Houston-based Peacock Records. “Hound Dog” rose to the top of the r&b chart in 1953 and would have sold even more copies had other labels not issued their own versions and “answer” records.[^80]
+The cultural interaction involved in the song “Hound Dog” entailed both collaboration and exploitation, ventriloquism and fruitful exchange. It is the story of a song written by two Jewish songwriters for a gender transgressive female blues singer and redone in a new fashion by a white working-class Southerner. The songwriters were Jerry Leiber and Mike Stoller, who fell in love with black culture and produced hits for such black groups as the Coasters and the Drifters. By most accounts, group members were impressed with the depth of black cultural knowledge and respect for black life that the pair had. Yet they did not always shy away from songs that emphasized black clownishness or black animal sexuality. In writing "Hound Dog" for Big Mama Thornton, they wrote for a singer whose short hair, male clothing, and gruff manner made her a distinctive female presence. They expected she would growl the song that drew upon the blues motifs to tell the story of a woman who rids herself of a gigolo but Thornton’s first run-through was more akin to crooning. Efforts to tell her how to sing led to her counter that a white boy had no standing to tell her how to sing the blues that she grew up with. Eventually a rapprochement was reached and Thornton added her own interpretative elements, which led her at one point to claim ownership of the song in an effort to get fair remuneration from Houston-based Peacock Records. “Hound Dog” rose to the top of the r&b chart in 1953 and would have sold even more copies had other labels not issued their own versions and “answer” records.[^80]
 
 [^80]:	See John Covach, _What’s That Sound: An Introduction to Rock and Its History_ (New York: W. W. Norton, 2009); Michael T. Bertrand, _Race, Rock, and Elvis_ (Urbana: University of Illinois Press, 2000); Peter Guralnick, _Last Train to Memphis: The Rise of Elvis Presley_ (Boston: Little, Brown, and Co., 1994).
 
 Although he knew the original, it was a parody version that Elvis Presley really enjoyed when he saw it performed in Las Vegas some three years later. Presley’s version, which featured machine-gun drumming and an unusual guitar solo, lacked Thornton’s double entendres and her blues rhythm. In its stead, Presley added a Latin riff and a sneer (supposedly anger at being made fun of during a television appearance). A testimony to eclectic tastes, Elvis’s 1956 version topped the r&b and country charts and reached number two on the pop chart. _Melody Maker_ dismissed the record as a thoroughly bad record, loud and incoherent. Bob Dylan, on the hand, claimed that hearing it in Minnesota at the age of fifteen changed his life. For their part, Leiber and Stoller did not like Presley’s version, thinking it too nervous, too fast, and lacking Thornton’s bite. Presley thought it a diversion, the silliest song he ever recorded.
 
-Elvis had a less conscious relationship with other cultures than Leiber and Stoller. He grew up close to black neighborhoods in Memphis and bought his clothes at the leading clothier for black people. He, of course, deeply imbibed black blues and rhythm-and-blues (but not jazz, which never found favor with poor whites). Treating it as part of his environment, he admitted to _Jet_ magazine that “nobody can sing that kind of music like colored people . . . I know that. But I always liked that kind of music.”[^81] The case for Presley being part of the white minstrelsy tradition of love and theft is far from open and shut. Being part of the southern white working class, he did not feel the stultifying nature of all-white suburban life that prompted a turn of black culture for energy and exoticism. Although the white working class had the privilege of white skin, it experienced a measure of denigration and dismissal. Presley drew on white-trash traditions of masculinity as well as black ones. For his Sun Records sides, he melded a blues with a country beat. This combination of various elements, when played faster than the blues, was extremely danceable. Originally rejected by country stations as too black and rhythm and blues stations as too white, Elvis achieved musically what previous rockabilly musicians who had mixed country and rhythm and blues had not. Where they had seasoned their country elements with rhythm and blues, Elvis more thoroughly merged them, producing a music that Peter Guralnick terms “nervously up tempo.”[^82]
+Elvis had a less conscious relationship with other cultures than Leiber and Stoller. He grew up close to black neighborhoods in Memphis and bought his clothes at the leading clothier for black people. He, of course, deeply imbibed black blues and rhythm-and-blues (but not jazz, which never found favor with poor whites). Treating it as part of his environment, he admitted to _Jet_ magazine that “nobody can sing that kind of music like colored people . . . I know that. But I always liked that kind of music.”[^81]
+
+The case for Presley being part of the white minstrelsy tradition of love and theft is not open and shut. Being part of the southern white working class, he did not feel the stultifying nature of all-white suburban life that prompted a turn of black culture for energy and exoticism. Although the white working class had the privilege of white skin, it experienced a measure of denigration and dismissal. Presley drew on white-trash traditions of masculinity as well as black ones. For his Sun Records sides, he melded a blues with a country beat. This combination of various elements, when played faster than the blues, was extremely danceable. Originally rejected by country stations as too black and rhythm and blues stations as too white, Elvis achieved musically what previous rockabilly musicians who had mixed country and rhythm and blues had not. Where they had seasoned their country elements with rhythm and blues, Elvis more thoroughly merged them, producing a music that Peter Guralnick terms “nervously up tempo.”[^82]
 
 [^81]:	Quoted in Bertrand, _Race, Rock, and Elvis_, 199.
 
 [^82]:	Peter Guralnick, “Rockabilly,” in Jim Miller, ed. _The Rolling Stone Illustrated History of Rock & Roll_ (New York: Rolling Stone Press, 1976), 64-67.
 
-In the end, it was less his sound than his sexuality that attracted the most attention---exciting audiences and offending censorious critics with his gyrations. His self-presentation earned him the derisive name “Elvis the Pelvis” and prompted Ed Sullivan famously to shoot him from the waist up during his performances. Black rock ’n’ roll pioneers who hoped to cross over with white audiences had to navigate the pitfalls inherent in sexual expression more deliberately. For Little Richard, born Richard Penniman, removing the threat of black male sexuality was through outright exaggeration to nearly comic proportions. Sporting a flamboyant homosexuality and wild man persona, he combined the outlandish stage presence with lyrics such as the original ones for Tutti Frutti (1956)--“Tutti frutti, loose booty If it don’t fit, don’t force it You can grease it, make it easy”--and the slightly less scandalous “Good golly, Miss Molly, you sure like to ball.” Both his manner and his lyrics made him ripe for covers by white artists. Chuck Berry took the opposite tack. He attempted to defuse tensions in his witty, well-crafted lyrics that, unlike those of rhythm and blues, obscured or removed his physical presence from the songs. Eschewing bragging, he wrote in the third person or quickly turned attention away from his feelings and desires, as he did in “Maybellene” by making the car chase paramount (even if it could be interpreted as a double entendre). Much of his early success came from his ability to pitch his music to a broader integrated audience with songs that spoke more directly to the high school and teenage experience (“Oh Baby Doll” and “School Days”). The persona failed to protect him, however. Charged with violating the Mann Act for having relations with a 14-year old he brought from Mexico to be a hatcheck girl in his St. Louis nightclub, Berry was convicted by an all-white, all-male jury in a trial that had to be retried because of the racist comments of the presiding judge.
+In the end, it was less his sound than his sexuality that attracted the most attention---exciting audiences and offending censorious critics with his gyrations. His self-presentation earned him the derisive name “Elvis the Pelvis” and prompted television impressario Ed Sullivan famously to shoot him from the waist up during his performances. Black rock ’n’ roll pioneers who hoped to cross over with white audiences had to navigate the pitfalls inherent in sexual expression more deliberately. For Little Richard, born Richard Penniman, removing the threat of black male sexuality was through outright exaggeration to nearly comic proportions. Sporting a flamboyant homosexuality and wild man persona, the boogie-woogie piano-playing Little Richard  combined the outlandish stage presence with lyrics such as the original ones for "Tutti Frutti" (1956)--“Tutti frutti, loose booty If it don’t fit, don’t force it You can grease it, make it easy”--and the slightly less scandalous “Good golly, Miss Molly, you sure like to ball.” Playing the clown partially removed the threat, although it did not obscure his musical genius, which even the tamer versions done by white artists could not eliminate.  
 
-Penniman and Berry did bequeath to popular music the elements that would be its building blocks for the 1960s and beyond---the backbeat you can not lose, the volume, and the tempo that insured the prominence of the beat. Berry was particularly innovative. Like Little Richard he merged boogie-woogie played at eight-beats to a bar, which changed the shuffle that boogie-woogie usually had, with a backbeat, which emphasis on even rather than initial beats. The first “guitar hero,” Berry often played double notes on the high strings, which gave the music an unprecedented density. Throughout the career that followed Berry was alternatively celebrated (Beatle John Lennon once said rock ‘n’ roll should be called “Chuck Berry”) and copied relentlessly. At the height of his career, however, he was little recognized for his contributions. That lack of recognition pointed to the real difficulties of crossing aesthetic and social borders on equal terms in the postwar period. Berry himself made few references to racial matters in his work---a line in “Handsome, Brown-Eyed Man” refers to being arrested on charges of unemployment---but perhaps one could see a larger hope for border-crossing culture in a verse from “School Days” in which the singer escapes from the drudgery of school for the joys of playing rock ‘n’ roll jukebox, which will “deliver me from days of old.” It remains hope that has yet to be realized.
+Chuck Berry took the opposite tack. He attempted to defuse tensions in his witty, well-crafted lyrics that, unlike those of rhythm and blues, obscured or removed his physical presence from the songs. Eschewing bragging, he wrote in the third person or quickly turned attention away from his feelings and desires, as he did in “Maybellene” by making the car chase paramount (even if it could be interpreted as a double entendre). Much of his early success came from his ability to pitch his music to a broader integrated audience with songs that spoke more directly to the high school and teenage experience (“Oh Baby Doll” and “School Days”). His signature moves -- a one-legged hop and the "duck walk" -- gave his performances a swagger that was less sexual than Penniman's leg thrown on his piano. The persona failed to protect him, however. Charged in 1962 with violating the Mann Act for having relations with a 14-year old he brought from Mexico to be a hatcheck girl in his St. Louis nightclub, Berry was convicted by an all-white, all-male jury in a trial that had to be retried because of the racist comments of the presiding judge, Released a year later, his popularity never quite recovered.
+
+If never as popular as white musicians whom they influenced, Penniman and Berry established the framework of the new music. Their emphasis on volume and tempo underscored the beat. Berry was particularly innovative. Like Little Richard he merged boogie-woogie played at eight-beats to a bar, which changed the shuffle that boogie-woogie usually had, with an emphasis on even rather than initial beats, the famous backbeat "you can't lose". The first “guitar hero,” Berry often played double notes on the high strings, which gave the music an unprecedented density. Throughout the career that followed Berry was alternatively celebrated (Beatle John Lennon once said rock ‘n’ roll should be called “Chuck Berry”) and copied relentlessly.
+
+Subsequent fame, however, did not always compensates for real snubs and damages. Berry wrote very little about the pains and frustrations of being black yet the wounds occasionally cropped up, albeit in transfigured, metaphorical form. "Handsome, Brown-Eyed Man" in which the color is transferred from skin to eye does have a sly wink at white women's interest in black men, exclaiming that the interest dated "back ever since the world began" that has been the trouble. Such humor was less apparent in the seemingly innocent "School Days” in which the singer escapes from the drudgery of school for the joys of playing rock ‘n’ roll on the jukebox, which will “deliver me from days of old.” That reference to racism constitutes a reminder that for all his innovations in boundary crossing, Berry and other black musicians were not always fully part of the transnational culture that Ellison hoped would emerge.
